# sqlite3_hans

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-sqlite3-src.sh
.github/workflows/: github-actions-build.yml
src/: fts5_hans.cpp  fts5_hans.h  fts5_pinyin_init.c  fts5_pinyin_tokenizer.c  fts5_pinyin_tokenizer.h
